# python-feature-set

./: .gitignore  README.md  REFERENCES.txt  leaplogic-repo.xlsx  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
.trunk/: trunk.yaml
com/inbravo/core/: DataTypeCasting.py  DataTypeTest.py  DataTypes.py  HelloWorld.ipynb  HelloWorld.py  IntendationTest.py  List.py  MainFunctionTest.py  SetTest.py  StringHandling.py  TupleTest.py  VariableTest.py
com/inbravo/dbx/: Sales_Data_Analysis.ipynb
com/inbravo/file/: File_Meta_Data.py  SAS_File_Counter.py  SHUtil_Test.py  URL_Validator.py  file_count.py  smart_file_organizer.py
com/inbravo/html/: HTMLReader.py
com/inbravo/llm/: dataloader.ipynb  multihead-attention.ipynb
com/inbravo/lms/: Borrow-Aniket.csv  Return-Aniket.csv  Stock.csv
com/inbravo/matplot/: Graph_Test.py
com/inbravo/modules/: mod.py  mod_test.py
com/inbravo/pandas/: DataHandling.py  DataManagmentPandas.py  Diff_Columns_Agg.py  Projects.py  YearwiseSaleFigures.py
com/inbravo/regexp/: RegExpUtils.py  Reg_Exp_Utils.py
com/inbravo/selenium/: page_hitter.py
com/inbravo/string/: FString.py  StringHandling.py
com/inbravo/struct/: book.py  library_utils.py  main_app.py  python_struct.ipynb
com/inbravo/system/: Install_NLTK.py  LibVersion.py  OSInfo.py
com/inbravo/tkinter/: hello_world.py
com/inbravo/udemy/: 01 - Installation and Setup.ipynb  03 - Series.ipynb  Playground.ipynb  (+1 more)
dataset/super-market/: sales.csv  super-market-sales-less-record.csv  super-market-sales.csv
mind-maps/: GPT-2 based Data Loader.xmind
(+6 files in other folders)
